@@ -164,6 +164,7 @@ VAT_NUMBERS = [
     ('RO', '24736200', True),
     ('RO', '1234567897', True),
     ('RO', '1630615123457', True),
+    ('RO', '-7793957', False),
     ('RU', '5505035011', True),
     ('RU', '550501929014', True),
     ('SE', '123456789701', True),
