@@ -1,3 +1,5 @@
+* Fix check for negative integer
+
 Version 1.0 - 2011-09-28
 * Fix UK VAT check
 * Fix UK VAT 9755 validation
